<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    android:id                = "@+id/relativeLayout1"
    android:layout_width      = "match_parent"
    android:layout_height     = "match_parent"
    android:background        = "@drawable/black"
>
    <hu.ureczky.celebrations.CameraSurface
        android:id            = "@+id/cameraPreview"
        android:layout_width  = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_centerInParent = "true"
    />
    <LinearLayout
        android:id            = "@+id/cameraExtraLayer"
        android:layout_width  = "match_parent"
        android:layout_height = "match_parent"
        android:orientation   = "vertical"
    />
    <TextView
        android:id                     = "@+id/infos"
        android:layout_width           = "wrap_content"
        android:layout_height          = "wrap_content"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentTop  = "true"
        android:padding                = "20dp"
        android:text                   = "Informations"
        android:textColor              = "#FFFFFFFF"
        android:shadowColor            = "#FF000000"
        android:shadowDx               = "1"
        android:shadowDy               = "1"
        android:shadowRadius           = "2"
    />
    <Button
        android:id                       = "@+id/shootBtn"
        android:layout_width             = "wrap_content"
        android:layout_height            = "wrap_content"
        android:layout_alignParentBottom = "true"
        android:layout_centerHorizontal  = "true"
        android:onClick                  = "shootClick"
        android:text                     = "@string/shoot"
    />
    <SeekBar
        android:id                       = "@+id/zoomBar"
        android:layout_width             = "match_parent"
        android:layout_height            = "wrap_content"
        android:layout_toLeftOf          = "@id/shootBtn"
        android:layout_alignParentBottom = "true"        
    />	
	<LinearLayout
        android:orientation             = "vertical"
        android:layout_width            = "wrap_content"
        android:layout_height           = "match_parent"
        android:layout_alignParentRight = "true"
        android:gravity                 = "center"
        android:background              = "@drawable/black"
        android:padding                 = "5dp"
    >
    	<ImageView
		    android:id                      = "@+id/targetIcon"
		    android:layout_width            = "wrap_content"
	        android:layout_height           = "wrap_content"
	        android:onClick                 = "switchTarget"
	        android:src                     = "@drawable/sun"
		/>
    	<TextView
		    android:id                       = "@+id/targetText"
	        android:layout_height            = "wrap_content"
	        android:layout_width             = "wrap_content"
	        android:text                     = "@string/target"
	        android:textStyle                = "bold"
	        android:textColor                = "#FFFFFF"
		/>
    	<View
    	    android:layout_height = "0dp"
	        android:layout_width  = "match_parent"
    	    android:layout_weight = "1"
    	/>
    	<FrameLayout
   			android:layout_height            = "wrap_content"
	        android:layout_width             = "wrap_content"
    	>
			<ImageView
			    android:layout_width             = "64dp"
		        android:layout_height            = "64dp"
		        android:paddingRight             = "4dp"
		        android:src                      = "@drawable/measurements"
			/>
			<TextView
			    android:id                       = "@+id/historyCounter"
			    android:gravity                  = "center"
			    android:layout_width             = "64dp"
		        android:layout_height            = "64dp"
		        android:paddingRight             = "4dp"
		        android:text                     = "7"
		        android:textColor                = "#FFFFFF"
		        android:textStyle                = "bold"
		        android:textSize                 = "20dp"
		        android:onClick                  = "launchHistory"
		        android:rotation                 = "-10"
			/>
		</FrameLayout>
		<TextView
		    android:gravity                  = "center"
		    android:layout_width             = "80dp"
	        android:layout_height            = "wrap_content"
	        android:text                     = "@string/pictures"
	        android:textColor                = "#FFFFFF"
	        android:textStyle                = "bold"
		/>
		<ImageView
		    android:id                     = "@+id/settingsIcon"
		    android:visibility             = "gone"
		    android:gravity                = "center"
		    android:layout_width           = "wrap_content"
	        android:layout_height          = "wrap_content"
	        android:onClick                = "launchSettings"
	        android:src                    = "@drawable/settings"
		/>
		<View
    	    android:layout_height = "0dp"
	        android:layout_width  = "match_parent"
    	    android:layout_weight = "1"
    	/>
		<ImageView
		    android:id                       = "@+id/worldIcon"
		    android:layout_width             = "wrap_content"
	        android:layout_height            = "wrap_content"
	        android:onClick                  = "launchResult"
	        android:src                      = "@drawable/globe"
		/>
		<TextView
		    android:gravity                  = "center"
		    android:layout_width             = "80dp"
	        android:layout_height            = "wrap_content"
	        android:text                     = "@string/result"
	        android:textColor                = "#FFFFFF"
	        android:textStyle                = "bold"
		/>
    </LinearLayout>
</RelativeLayout>